# SimpleBigNum

./: .gitignore  CMakeLists.txt
src/: UIntX.h  main.cpp
tst/: UIntXTest.cpp
